overflow vertical scroll on webpages is fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,9 +86,9 @@ background-color: #7B42AC;
 mat-sidenav {
   width: 228px;
 }
-mat-sidenav-container {
-  height: 100%;
-}
+// mat-sidenav-container {
+//   height: 100%;
+// }
 .mat-sidenav-container {
   background: #F3F4F4;
 }
